--- a/squirrel/sightings/templates/sightings/stats.html
+++ b/squirrel/sightings/templates/sightings/stats.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,15 +8,15 @@
 <body>
 
 <h1>Statistics of squirrels in the Central Park</h1>
-<p>Squirrels are adults</p>
-<p>Squirrels are juveniles</p>
-	<p>Squirrels are black</p>
-<p>Squirrels are cinnamon</p>
-	<p>Squirrels are grey</p>
-	<p>Squirrels are running when being spotted</p>
-	<p>Squirrels are chasing when being spotted</p>
-	<p>Squirrels are climbing when being spotted</p>
-	<p>Squirrels are eating when being spotted</p>
-	<p>Squirrels are foraging when being spotted</p>
+<p><li>Number of squirrels are {{adults}}</p>
+<p><li>Number of squirrels are {{juveniles}}</p>
+	<p><li>Number of squirrels are {{black}}</p>
+<p><li>Number of squirrels are {{cinnamon}}</p>
+	<p><li>Number of squirrels are {{grey}}</p>
+	<p><li>Number of squirrels are {{running}} when being spotted</p>
+	<p><li>Number of squirrels are {{chasing}} when being spotted</p>
+	<p><li>Number of squirrels are {{climbing}} when being spotted</p>
+	<p><li>Number of squirrels are {{eating}} when being spotted</p>
+	<p><li>Number of squirrels are {{foraging}} when being spotted</p>
 </body>
 </html>
