--- a/squirrel/sightings/templates/sightings/stats.html
+++ b/squirrel/sightings/templates/sightings/stats.html
@@ -18,5 +18,6 @@
 	<p><li>Number of squirrels are {{climbing}} when being spotted</p>
 	<p><li>Number of squirrels are {{eating}} when being spotted</p>
 	<p><li>Number of squirrels are {{foraging}} when being spotted</p>
+<a href="{% url 'sightings:index' %}">Return to the Home Page</a>
 </body>
 </html>
