--- a/squirrel/sightings/templates/sightings/add.html
+++ b/squirrel/sightings/templates/sightings/add.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-    <title>Add A New Sighting</title>
-    <meta charset="utf-8">
     
-    </head>
     <body>
     
 
-        <div class="miniwrap">
-        <h1>Add a new sighting</h1>
+        <div  style="color:#009f6b">
+        <h1> Add a new sighting</h1>
+        
         <form method="POST">
 
 
@@ -19,7 +17,7 @@
         <br>
         <input type="submit" value="Add">
         
-	<h4> You will be linked back to the index page (first page) directly after you clicked Add.</h4>
+	
         </form>
     </body>
 </html>
