--- a/squirrel/sightings/templates/sightings/index.html
+++ b/squirrel/sightings/templates/sightings/index.html
@@ -4,8 +4,8 @@
         
         <h1>The squirrels in the Central Park</h1>
 
-      <li><a href="{% url 'sightings:add' %}"><span>Click to add a new sighting</span></a></li>
-      <li><a href="{% url 'sightings:stats' %}"><span>Click to view the statistics of the squirrels</span></a></li>
+        <a href='{%url 'sightings:add'%}'>Add new data</a>
+	<a href='{% url 'sightings:stats'%}'>See some stats</a>
 
         <h2>Sightings of all squirrels </h2> 
             {%if sightings%}
