--- a/squirrel/sightings/templates/sightings/index.html
+++ b/squirrel/sightings/templates/sightings/index.html
@@ -4,8 +4,8 @@
         
         <h1>The squirrels in the Central Park</h1>
 
-        <a href='{%url 'sightings:add'%}'>Add new data</a>
-	<a href='{% url 'sightings:stats'%}'>See some stats</a>
+        <a href='{%url 'sightings:add'%}'>Click to add a new sighting</a>
+	<a href='{% url 'sightings:stats'%}'>Click to view the statistics of the squirrels</a>
 
         <h2>Sightings of all squirrels </h2> 
             {%if sightings%}
