--- a/squirrel/sightings/templates/sightings/index.html
+++ b/squirrel/sightings/templates/sightings/index.html
@@ -2,7 +2,7 @@
     
     <body>
         
-        <h1>The squirrels in the Central Park</h1>
+        <h1 text-align:center>The squirrels in the Central Park</h1>
 
         <li><a href='{%url 'sightings:add'%}'><span><font size="5">Click to add a new sighting</font></span></a></li>
 	<li><a href='{% url 'sightings:stats'%}'><span><font size="5">Click to view the statistics of the squirrels</font></span></a></li>
