--- a/squirrel/sightings/templates/sightings/update.html
+++ b/squirrel/sightings/templates/sightings/update.html
@@ -3,7 +3,7 @@
     <body>
         <div style="color:#009f6b">
         <h1>Update the sighting</h1>
-	<form  method="POST" id="updateform">
+	<form  method="POST">
         {% csrf_token %}
 	{{form.as_p}}
 		
