--- a/squirrel/sightings/templates/sightings/add.html
+++ b/squirrel/sightings/templates/sightings/add.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 
 <html>
@@ -6,18 +7,21 @@
     
 
         <div  style="color:#009f6b">
-        <h1> Add a new sighting</h1>
+        <div  style="font-size:45px;">
+        <div  style="font-weight:bold;">
+        <div class="text" style=" text-align:center;" >Add a new sighting</div>
+        
+        <hr width="70%" color="#009f6b" />
         
         <form method="POST">
 
-
         	{% csrf_token %}
 		{{form.as_p}}
-
         <br>
-        <input type="submit" value="Add">
+        <input type="submit" value="Add a new sighting">
         
 	
         </form>
     </body>
 </html>
+
